[gd_scene load_steps=18 format=3 uid="uid://cxo8k0ggsxbmi"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_dq46g"]
[ext_resource type="FontFile" uid="uid://bvyg6gqhavh7g" path="res://fonts/Orange Kid.otf" id="2_1prko"]
[ext_resource type="Texture2D" uid="uid://bfqy4847gbl5e" path="res://assets/textures/sprites/heart.png" id="2_1rw8c"]
[ext_resource type="Texture2D" uid="uid://dnw24ye7krwpv" path="res://assets/textures/sprites/oxygen.png" id="3_6pt7e"]
[ext_resource type="Texture2D" uid="uid://gyum8u87d04d" path="res://assets/textures/sprites/heart_full.png" id="4_gntjw"]
[ext_resource type="Texture2D" uid="uid://chamdy1p4wpa6" path="res://assets/textures/sprites/oxygen_filled.png" id="6_t082s"]
[ext_resource type="PackedScene" uid="uid://btt1rm33hdtgo" path="res://scenes/RippleShader.tscn" id="7_11jxp"]
[ext_resource type="Texture2D" uid="uid://da70oe2ex3cnw" path="res://assets/textures/text_sprites/you_died.png" id="8_8ygc3"]
[ext_resource type="PackedScene" uid="uid://bbdfbbo0b6h5r" path="res://scenes/restart_button.tscn" id="9_pekat"]
[ext_resource type="PackedScene" uid="uid://cs750qg404w64" path="res://scenes/menu_button.tscn" id="10_ub5tw"]
[ext_resource type="Texture2D" uid="uid://bfyag24pvum4v" path="res://assets/textures/sprites/item_slot.png" id="11_ijajr"]
[ext_resource type="Texture2D" uid="uid://1j2ywq56ec55" path="res://assets/textures/sprites/item_sheet.png" id="12_3sa5d"]

[sub_resource type="LabelSettings" id="LabelSettings_1l5dl"]
line_spacing = 2.0
font = ExtResource("2_1prko")
font_size = 13
font_color = Color(0.870588, 0.862745, 0.858824, 0.768627)
shadow_size = 0

[sub_resource type="Animation" id="Animation_bl3bv"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RestartButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MenuButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("death_depth:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_a6nik"]
resource_name = "darken"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.498039)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RestartButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MenuButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_buttons"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("death_depth:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_06qvi"]
_data = {
"RESET": SubResource("Animation_bl3bv"),
"darken": SubResource("Animation_a6nik")
}

[sub_resource type="LabelSettings" id="LabelSettings_ku5n3"]
font = ExtResource("2_1prko")
font_size = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dq46g")

[node name="Depth" type="Label" parent="."]
z_index = 25
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 108.0
offset_bottom = 72.0
label_settings = SubResource("LabelSettings_1l5dl")
horizontal_alignment = 1

[node name="EmptyHearts" type="TextureRect" parent="."]
z_index = 98
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 33.0
texture = ExtResource("2_1rw8c")
stretch_mode = 1

[node name="Hearts" type="TextureRect" parent="."]
z_index = 99
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 33.0
texture = ExtResource("4_gntjw")
expand_mode = 1
stretch_mode = 1

[node name="EmptyO2" type="TextureRect" parent="."]
z_index = 98
layout_mode = 0
offset_left = 8.0
offset_top = 34.0
offset_right = 108.0
offset_bottom = 50.0
texture = ExtResource("3_6pt7e")
stretch_mode = 1

[node name="O2Label" type="Label" parent="EmptyO2"]
z_index = -1
layout_mode = 0
offset_left = 3.0
offset_top = -1.0
offset_right = 99.0
offset_bottom = 23.0
text = "O2"
label_settings = SubResource("LabelSettings_1l5dl")
horizontal_alignment = 1

[node name="O2" type="TextureRect" parent="."]
z_index = 25
layout_mode = 0
offset_left = 8.0
offset_top = 34.0
offset_right = 108.0
offset_bottom = 50.0
texture = ExtResource("6_t082s")
expand_mode = 1
stretch_mode = 1

[node name="ScreenDistort" parent="." instance=ExtResource("7_11jxp")]
layout_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
position = Vector2(240, 128)
scale = Vector2(0.866, 1)
texture = ExtResource("8_8ygc3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 288.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_06qvi")
}

[node name="RestartButton" parent="." instance=ExtResource("9_pekat")]
layout_mode = 0
offset_left = 248.0
offset_top = 176.0
offset_right = 312.0
offset_bottom = 40.0

[node name="MenuButton" parent="." instance=ExtResource("10_ub5tw")]
layout_mode = 0
offset_left = 168.0
offset_top = 176.0
offset_right = 232.0
offset_bottom = 40.0

[node name="death_depth" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 184.0
offset_top = 64.0
offset_right = 296.0
offset_bottom = 87.0
label_settings = SubResource("LabelSettings_ku5n3")
horizontal_alignment = 1

[node name="ItemSlot" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(456, 24)
texture = ExtResource("11_ijajr")

[node name="ItemSheet" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(136, 24)
texture = ExtResource("12_3sa5d")
hframes = 3

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
